--- a/CV_generator/CV.html
+++ b/CV_generator/CV.html
@@ -5,21 +5,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head> <body>
     <div id="sidebar">
-        <image>
-            <div class=profile>
+            <div class="profile">
             <img src="https://i.pinimg.com/originals/1b/8c/d3/1b8cd3235ad6e1b02cc970a8850f1f17.jpg" alt="Couldn't locate image">
             </div>
-        </image> <contact>
-            <div class="contact">
-                <h3>CONTACT</h3>
-                <ul>
-                    <li id=ln><a href="#">Holland Russell</a><li>
-                    <li id=phone>+1 (910) 419-2595</li>
-                    <li id=mail>hollandrussell@fangold.com</li>
-                    <li id=address>181 Joralemon Street, Charco, Maryland, 9970</li>
-                </ul>
-            </div>
-        </contact>
+    <div class="contact red">
+        <h3>CONTACT</h3>
+            <ul>
+                <li id="ln"><a href="#">Holland Russell</a><li>
+                <li id="phone">+1 (910) 419-2595</li>
+                <li id="mail">hollandrussell@fangold.com</li>
+                <li id="address">181 Joralemon Street, Charco, Maryland, 9970</li>
+            </ul>
+        </div>
     </div> <div id="main-info">
         <header class="intro">
             <h1>Holland Russell</h1>
@@ -32,20 +29,18 @@
 </p></li>
                     </ul>
                 </div>
-        </header> <skills>
-            <div class="division">
+        </header> 
+            <div class="division red">
             <h3>SKILLS</h3>
                 <div class="paragraph">
-                    <p class="list-title">Skills:</p> <li>non - **</li><li>exercitation - ***</li><li>pariatur - **</li><li>ipsum - *</li><li>excepteur - *****</li><li>Lorem - *****</li><li>enim - ****</li> </ul>
+                    <p class="list-title">Skills:</p> <ul> <li>non - **</li><li>exercitation - ***</li><li>pariatur - **</li><li>ipsum - *</li><li>excepteur - *****</li><li>Lorem - *****</li><li>enim - ****</li> </ul>
                 </div>
-            </div>
-        </skills><education>
-            <div class="division">
+            </div> 
+            <div class="division red">
             <h3>EDUCATION</h3>
                 <div class="paragraph"><p><br><br>School 1<br>2007-2010<br><br>School 2<br>2005-2007<br><br>School 3<br>2002-2005</p>
               </div>
             </div>
-        </education>
       </div>
     </div>
   </body>
