--- a/CV_generator/CV.html
+++ b/CV_generator/CV.html
@@ -1,14 +1,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CV generator</title>
+    <title>CV</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head> <body>
     <div id="sidebar">
             <div class="profile">
             <img src="https://i.pinimg.com/originals/1b/8c/d3/1b8cd3235ad6e1b02cc970a8850f1f17.jpg" alt="Couldn't locate image">
             </div>
-    <div class="contact blue">
+    <div class="contact red">
         <h3>CONTACT</h3>
             <ul>
                 <li id="ln"><a href="#">Holland Russell</a><li>
@@ -16,10 +16,7 @@
                 <li id="mail">hollandrussell@fangold.com</li>
                 <li id="address">181 Joralemon Street, Charco, Maryland, 9970</li>
             </ul>
-  
-            
-  
-          </div>
+    </div>
     </div> <div id="main-info">
         <header class="intro">
             <h1>Holland Russell</h1>
@@ -33,13 +30,13 @@
                     </ul>
                 </div>
         </header> 
-            <div class="division blue">
+            <div class="division red">
             <h3>SKILLS</h3>
                 <div class="paragraph">
                     <p class="list-title">Skills:</p> <ul> <li>non - **</li><li>exercitation - ***</li><li>pariatur - **</li><li>ipsum - *</li><li>excepteur - *****</li><li>Lorem - *****</li><li>enim - ****</li> </ul>
                 </div>
             </div> 
-            <div class="division blue">
+            <div class="division red">
             <h3>EDUCATION</h3>
                 <div class="paragraph"><p><br><br>School 1<br>2007-2010<br><br>School 2<br>2005-2007<br><br>School 3<br>2002-2005</p>
               </div>
